@@ -66,7 +66,7 @@ public:
 	//! Creates a planar texture mapping on the mesh
 	//! \param mesh: Mesh on which the operation is performed.
 	//! \param resolution: resolution of the planar mapping. This is the value
-	//! specifying which is the releation between world space and 
+	//! specifying which is the relation between world space and 
 	//! texture coordinate space.
 	virtual void makePlanarTextureMapping(scene::IMesh* mesh, f32 resolution) const;
 
